--- a/src/components/home/list/item/Item.module.css
+++ b/src/components/home/list/item/Item.module.css
@@ -1,8 +1,9 @@
 .body {
-    border: 1px solid red;
+    border: 1px solid black;
+    border-radius: 20px;
     padding: 10px 20px 40px;
-    margin-bottom: 20px;
     position: relative;
+    margin: 10px;
 }
 
 .content {
@@ -25,6 +26,9 @@
     max-width: 300px;
     margin: 0 auto;
     margin-bottom: 5px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .text:first-letter {
@@ -47,6 +51,7 @@
     cursor: pointer;
     color: dimgrey;
     transition: color .3s ease;
+    text-decoration: none;
 }
 
 .btn:hover {
