--- a/src/components/home/item/Item.module.css
+++ b/src/components/home/item/Item.module.css
@@ -1,9 +1,9 @@
 .body {
     border: 1px solid black;
     border-radius: 20px;
-    padding: 10px 20px 40px;
+    padding: 10px;
+    margin-bottom: 10px;
     position: relative;
-    margin: 10px;
 }
 
 .content {
